@@ -6,7 +6,10 @@ import com.DenserMusic.DenserMusic.dto.DeezerResponse;
 import com.DenserMusic.DenserMusic.model.Artista;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class ConsultaDeezerService {
@@ -21,7 +24,7 @@ public class ConsultaDeezerService {
         DeezerResponse response = deezerClient.searchArtistByName(nome);
 
         if (response != null && !response.data().isEmpty()) {
-            DeezerArtist deezerArtist = response.data().get(0);
+            DeezerArtist deezerArtist = response.data().getFirst();
 
             Artista artista = new Artista(
                     deezerArtist.name(),
@@ -33,5 +36,19 @@ public class ConsultaDeezerService {
         }
 
         return Optional.empty();
+    }
+
+    public List<Artista> buscaArtistasPorNome(String nome) {
+        DeezerResponse response = deezerClient.searchArtistByName(nome);
+
+        if (response != null && !response.data().isEmpty()) {
+            return response.data().stream()
+                    .map(deezerArtist -> new Artista(
+                            deezerArtist.name(),
+                            deezerArtist.picture(),
+                            deezerArtist.totalFas()))
+                    .collect(Collectors.toList());
+        }
+        return Collections.emptyList();
     }
 }
